start index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio landing page</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-  
+  <header>
+   <nav>
+     <span>MyProfile.Hub</span>
+     <ul>
+       <li>
+        <a href="#home">Home</a>  
+       </li>
+       <li>
+        <a href="#about">About</a>
+       </li>
+       <li>
+        <a href="#contact">Contact</a>
+       </li>
+       <li>
+        <a href="#my-work">My Work</a>
+       </li>
+     </ul>
+   </nav>
+      <span>I'm Grievin otieno,</span>
+      <span>I'm a Full stack Web Developer,<br></span>
+      <span>Welcome to My Portfolio;<br></span>
+        <a href="my-work"></a><button type="button">View my Work</button>
+  </header>
+  <!-- <section>
+    <div>
+      <h1>About Me</h1>
+      <p></p>
+    </div>
+  </section> -->
 </body>
 </html>
