add nav tags and about me section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <span>Welcome to My Portfolio;<br></span>
         <a href="my-work"></a><button type="button">View my Work</button>
   </header>
-  <!-- <section>
+  <section>
     <div>
       <h1>About Me</h1>
       <p></p>
     </div>
-  </section> -->
+  </section>
 </body>
 </html>
