--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   <section>
     <div>
       <h1>About Me</h1>
+      <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
+      <h3>Backround info</h3>
+      <p></p>
+      <h3>Rare skills</h3>
       <p></p>
     </div>
   </section>
