--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
       <p></p>
     </div>
   </section>
+  <section>
+    <div>
+      <h1>My Work</h1>
+      <p>Here are some of the projects I have worked on;</p>
+    </div>
+  </section>
 </body>
 </html>
