divided about me sections to style the elements differently

--- a/index.html
+++ b/index.html
@@ -35,18 +35,24 @@
   </header>
   <section>
     <div>
-      <h1>About Me</h1>
-      <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
-      <h3>Backround info</h3>
-      <p></p>
-      <h3>Rare skills</h3>
-      <p></p>
+      <div>
+        <h1>About Me</h1>
+      </div>
+      <div>
+        <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
+        <h3>Backround info</h3>
+        <p></p>
+        <h3>Rare skills</h3>
+        <p></p>
+      </div>
     </div>
   </section>
   <section>
     <div>
-      <h1>My Work</h1>
-      <p>Here are some of the projects I have worked on;</p>
+      <div>
+        <h1>My Work</h1>
+        <p>Here are some of the projects I have worked on;</p>
+      </div>
     </div>
   </section>
 </body>
