--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <header>
    <nav>
      <span>MyProfile.Hub</span>
-     <ul>
-       <li>
-        <a href="#home">Home</a>  
+     <ul class="nav justify-content-end">
+       <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#home">Home</a>  
        </li>
-       <li>
-        <a href="#about">About</a>
+       <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
        </li>
-       <li>
-        <a href="#contact">Contact</a>
+       <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
        </li>
-       <li>
-        <a href="#my-work">My Work</a>
+       <li class="nav-item">
+        <a class="nav-link" href="#my-work">My Work</a>
        </li>
      </ul>
    </nav>
