--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
       <div>
         <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
         <h3>Backround info</h3>
-        <p></p>
+        <p>With a Bachelors degree in Agricultural Economics and a passion for Technology<br>Grievin is a dedicated enthusiast with web design skills,software programming and cite development guru <br>I have worked as a freelance for MyProfile.Hub, google Kenya, Techdevs and booger.com <br></p>
+        <p>My interest in software development began quite a long time ago after the completion of my Highschool, I met with a software Engineer who showed me his art work and ever since then I fell in love with Software programming.</p>
         <h3>Rare skills</h3>
+        <p>My current Interest are cyber security programming, systems Programming and Artificial Intelligence</p>
         <p></p>
       </div>
     </div>
