complete about me html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>My interest in software development began quite a long time ago after the completion of my Highschool, I met with a software Engineer who showed me his art work and ever since then I fell in love with Software programming.</p>
         <h3>Rare skills</h3>
         <p>My current Interest are cyber security programming, systems Programming and Artificial Intelligence</p>
-        <p></p>
+        <p>My current skills are <em>HTML 5,</em><em>css,</em><em>JavaScript</em><em>and Figma designs</em></p>
       </div>
     </div>
   </section>
