add cards to my work section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,63 @@
         <h1>My Work</h1>
         <p>Here are some of the projects I have worked on;</p>
       </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./Assets/anitaskitchen.png" class="card-img-top" alt="Anitas kitchen">
+        <div class="card-body">
+          <h5 class="card-title">Anita's kitchen</h5>
+          <p class="card-text">This is a sample of a Restaurant web page.</p>
+          <a href="#" class="btn btn-primary">See</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./Assets/kejachapchap.png" class="card-img-top" alt="buy">
+        <div class="card-body">
+          <h5 class="card-title">Keja Chap Chap</h5>
+          <p class="card-text">About
+            This platform lists houses for rent and for buying so that a user doesn't have to leave their comfort zone to look for them...</p>
+          <a href="#" class="btn btn-primary">See</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno">
+        <div class="card-body">
+          <h5 class="card-title">Favorite Pet</h5>
+          <p class="card-text">This is a sample of web page for my favorite pet a dog  called Bruno.</p>
+          <a href="#" class="btn btn-primary">See</a>
+        </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./Assets/prtfolio.png" class="card-img-top" alt="portfolio">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Project Portfolio for a client This is a sample of what a portfolio looks like</p>
+            <a href="#" class="btn btn-primary">See</a>
+          </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="./Assets/favrytband.png" class="card-img-top" alt="fband">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Project Favorite Band, Morgan Heritage music Band.See more details below</p>
+              <a href="#" class="btn btn-primary">See</a>
+            </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="./Assets/pexels-athena-2582937.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">My first web page</h5>
+                <p class="card-text">This is my very first Project,dubbed my first-web-page.</p>
+                <a href="#" class="btn btn-primary">See</a>
+              </div>
+            </div> 
     </div>
+  </section>
+  <section>
+    <div>
+      <span>Contact me?</span>
+    </div>
+    <p>Let's work together,<br>Drop an email.</p>
+    
   </section>
 </body>
 </html>
