add custom stylesheet styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        </li>
      </ul>
    </nav>
-   <div class="d-flex justify-content-center">
+   <div id="grievin" class="d-flex justify-content-center">
       <p><span>I'm Grievin otieno,</span><br>
         <span>I'm a Full stack Web Developer,</span><br>
         <span>Welcome to My Portfolio;</span></p>
@@ -38,9 +38,6 @@
       <a class="d-flex justify-content-center" href="#my-work"><button type="button">View my Work</button></a>
   </header>
   <section id="about" >
-    <div>
-      <h1>About Me</h1>
-    </div>
     <div class="d-flex justify-content-between">
       <div>
         <h3>Backround info</h3>
@@ -50,8 +47,7 @@
         <p>My current Interest are cyber security programming, systems Programming and Artificial Intelligence</p>
         <p>My current skills are <em>HTML 5,</em><em>css,</em><em>JavaScript</em> and <em>Figma designing</em></p>
       </div>
-      <div>
-        
+      <div> 
         <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
       </div>
     </div>
