customize index.css nav bar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
   <header>
-   <nav class="navbar sticky-top navbar-light bg-light">
-     <span>MyProfile.Hub</span>
+   <nav id="mynav" class="navbar sticky-top navbar-light ">
+     <p class="fw-bold">MyProfile.Hub</p>
      <ul class="nav justify-content-end">
        <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#home">Home</a>  
@@ -40,11 +40,11 @@
      </ul>
    </nav>
    <div id="grievin" class="d-flex justify-content-center">
-      <p><span>I'm Grievin otieno,</span><br>
-        <span>I'm a Full stack Web Developer,</span><br>
-        <span>Welcome to My Portfolio;</span></p>
+      <p >I'm Grievin otieno,<br>
+        I'm a Full stack Web Developer,<br>
+        Welcome to My Portfolio;</p>
     </div >
-      <a class="d-flex justify-content-center" href="#my-work"><button type="button">View my Work</button></a>
+      <a class="d-flex justify-content-center" href="#my-work"><button id="view" type="button">View my Work</button></a>
   </header>
   <section id="about" >
     <div class="d-flex justify-content-between">
