customize myabout in index.css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   </header>
   <section id="about" >
     <div class="d-flex justify-content-between">
-      <div>
+      <div id="myabout" >
+        <h1>About Me</h1>
         <h3>Backround info</h3>
         <p>With a Bachelors degree in Agricultural Economics and a passion for Technology<br>Grievin is a dedicated enthusiast with web design skills,software programming and cite development guru <br>I have worked as a freelance for MyProfile.Hub, google Kenya, Techdevs and booger.com <br></p>
         <p>My interest in software development began quite a long time ago after the completion of my Highschool <br> I met with a software Engineer who showed me his art work and ever since then I fell in love with Software programming.</p>
