resize cards on my work section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1>My Work</h1>
         <p>Here are some of the projects I have worked on;</p>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div id="card" class="card" style="width: 25rem;">
         <img src="./Assets/anitaskitchen.png" class="card-img-top" alt="Anitas kitchen">
         <div class="card-body">
           <h5 class="card-title">Anita's kitchen</h5>
@@ -76,7 +76,7 @@
           <a href="https://grievi.github.io/Anitas-kitchen/" class="btn btn-primary">See</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div id="card" class="card" style="width:25rem;">
         <img src="./Assets/kejachapchap.png" class="card-img-top" alt="buy">
         <div class="card-body">
           <h5 class="card-title">Keja Chap Chap</h5>
@@ -85,7 +85,7 @@
           <a href="https://kwathuta.github.io/Keja-Chap-Chap/" class="btn btn-primary">See</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div id="card" class="card" style="width: 25rem;">
         <img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno">
         <div class="card-body">
           <h5 class="card-title">Favorite Pet</h5>
@@ -93,7 +93,7 @@
           <a href="https://grievi.github.io/pet-web/" class="btn btn-primary">See</a>
         </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div id="card" class="card" style="width: 25rem;">
           <img src="./Assets/prtfolio.png" class="card-img-top" alt="portfolio">
           <div class="card-body">
             <h5 class="card-title">Project Portfolio</h5>
@@ -101,7 +101,7 @@
             <a href="https://grievi.github.io/project-portfolio/" class="btn btn-primary">See</a>
           </div>
           </div>
-          <div class="card" style="width: 18rem;">
+          <div id="card" class="card" style="width: 25rem;">
             <img src="./Assets/favrytband.png" class="card-img-top" alt="fband">
             <div class="card-body">
               <h5 class="card-title">Favourite Band</h5>
@@ -109,7 +109,7 @@
               <a href="https://grievi.github.io/Favourite-band-Project/" class="btn btn-primary">See</a>
             </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div id="card" class="card" style="width: 25rem;">
               <img src="./Assets/pexels-athena-2582937.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">My first web page Catch up Project</h5>
