style contact form

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       </div>
     </div>
   </section>
-  <section id="my-work">
-    <div>
+  <section >
+    <div id="my-work">
       <div>
         <h1>My Work</h1>
         <p>Here are some of the projects I have worked on;</p>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div id="card" class="card" style="width: 25rem;">
-        <img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno">
+        <img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno" height="270px">
         <div class="card-body">
           <h5 class="card-title">Favorite Pet</h5>
           <p class="card-text">This is a sample of web page for my favorite pet a dog  called Bruno.</p>
@@ -150,7 +150,7 @@
         Privacy Policy <br>
         Support.</p>
       <p><span>Contact Me</span><br>
-        <img src="./Assets/vectors/facebook.svg" alt="facebook"><br>
+        <img src="./Assets/vectors/facebook.svg" alt="facebook" class="img-primary"><br>
         <img src="./Assets/vectors/instagram.svg" alt="instagram"><br>
         <img src="./Assets/vectors/twitter.svg" alt="twitter"></p>      
     </section>
