--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         I'm a Full stack Web Developer,<br>
         Welcome to My Portfolio;</p>
     </div >
-      <a class="d-flex justify-content-center" href="#my-work"><button id="view" type="button">View my Work</button></a>
+    <div class="view-work"><a class="" href="#my-work"><button id="view" type="button">View my Work</button></a></div>
   </header>
   <section id="about" >
     <div class="d-flex justify-content-between">
@@ -58,7 +58,7 @@
         <p>My current skills are <em>HTML 5,</em><em>css,</em><em>JavaScript</em> and <em>Figma designing</em></p>
       </div>
       <div> 
-        <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" alt="my image" height="414px" width="328">
+        <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" class="img-fluid" alt="my image" height="414px" width="328">
       </div>
     </div>
   </section>
@@ -73,7 +73,7 @@
         <div class="card-body">
           <h5 class="card-title">Anita's kitchen</h5>
           <p class="card-text">This is a sample of a Restaurant web page.</p>
-          <a href="https://grievi.github.io/Anitas-kitchen/" class="btn btn-primary">See</a>
+          <a href="https://grievi.github.io/Anitas-kitchen/" class="btn btn-secondary">See</a>
         </div>
       </div>
       <div id="card" class="card" style="width:25rem;">
@@ -82,7 +82,7 @@
           <h5 class="card-title">Keja Chap Chap</h5>
           <p class="card-text">About
             This platform lists houses for rent and for buying so that a user doesn't have to leave their comfort zone to look for them...</p>
-          <a href="https://kwathuta.github.io/Keja-Chap-Chap/" class="btn btn-primary">See</a>
+          <a href="https://kwathuta.github.io/Keja-Chap-Chap/" class="btn btn-secondary">See</a>
         </div>
       </div>
       <div id="card" class="card" style="width: 25rem;">
@@ -90,7 +90,7 @@
         <div class="card-body">
           <h5 class="card-title">Favorite Pet</h5>
           <p class="card-text">This is a sample of web page for my favorite pet a dog  called Bruno.</p>
-          <a href="https://grievi.github.io/pet-web/" class="btn btn-primary">See</a>
+          <a href="https://grievi.github.io/pet-web/" class="btn btn-secondary">See</a>
         </div>
         </div>
         <div id="card" class="card" style="width: 25rem;">
@@ -98,7 +98,7 @@
           <div class="card-body">
             <h5 class="card-title">Project Portfolio</h5>
             <p class="card-text">Project Portfolio for a client This is a sample of what a portfolio looks like</p>
-            <a href="https://grievi.github.io/project-portfolio/" class="btn btn-primary">See</a>
+            <a href="https://grievi.github.io/project-portfolio/" class="btn btn-secondary">See</a>
           </div>
           </div>
           <div id="card" class="card" style="width: 25rem;">
@@ -106,7 +106,7 @@
             <div class="card-body">
               <h5 class="card-title">Favourite Band</h5>
               <p class="card-text">Project Favorite Band, Morgan Heritage music Band.See more details below</p>
-              <a href="https://grievi.github.io/Favourite-band-Project/" class="btn btn-primary">See</a>
+              <a href="https://grievi.github.io/Favourite-band-Project/" class="btn btn-secondary">See</a>
             </div>
             </div>
             <div id="card" class="card" style="width: 25rem;">
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <h5 class="card-title">My first web page Catch up Project</h5>
                 <p class="card-text">This is my very first Project,dubbed my first-web-page.</p>
-                <a href="https://grievi.github.io/catch-up-project/" class="btn btn-primary">See</a>
+                <a href="https://grievi.github.io/catch-up-project/" class="btn btn-secondary">See</a>
               </div>
             </div> 
     </div>
@@ -142,6 +142,7 @@
         </form>
       </div>
     </div>
+    <i class="fal fa-level-up"></i>
   </section>
   <footer>
     <section class="d-flex justify-content-between">
