edit final draft of the project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="view-work"><a class="" href="#my-work"><button id="view" type="button">View my Work</button></a></div>
   </header>
   <section id="about" >
-    <div class="d-flex justify-content-between">
+    <div id="d-flex" class="d-flex justify-content-around">
       <div id="myabout" >
         <h1>About Me</h1>
         <h3>Backround info</h3>
@@ -119,7 +119,7 @@
             </div> 
     </div>
   </section>
-  <section id="contact" class="d-flex justify-content-between">
+  <section id="contact" class="d-flex justify-content-around">
     <div>
       <h1>Contact me?</h1>
     <p>Let's work together,<br>Drop an email.</p>
