--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>My interest in software development began quite a long time ago after the completion of my Highschool <br> I met with a software Engineer who showed me his art work and ever since then I fell in love with Software programming.</p>
         <h3>Current Interests and skills</h3>
         <p>My current Interest are cyber security programming, systems Programming and Artificial Intelligence</p>
-        <p>My current skills are <em>HTML 5,</em><em>css,</em><em>JavaScript</em> and <em>Figma designing</em></p>
+        <p>My current skills are <em>HTML 5,</em><em>CSS,</em><em>JavaScript</em> and <em>Figma designing</em></p>
       </div>
       <div> 
         <img src="./Assets/IMG-20190625-WA0003_1625850510679_1625850586118.jpg" class="img-fluid" alt="my image" height="414px" width="328">
@@ -142,7 +142,6 @@
         </form>
       </div>
     </div>
-    <i class="fal fa-level-up"></i>
   </section>
   <footer>
     <section class="d-flex justify-content-between">
