change home page layout

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        </li>
      </ul>
    </nav>
-   <div id="grievin" class="d-flex justify-content-center">
+   <div id="grievin" class="d-flex justify-content-start">
       <p >I'm Grievin otieno,<br>
         I'm a Full stack Web Developer,<br>
         Welcome to My Portfolio;</p>
