remove card buttons

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div id="d-flex" class="d-flex justify-content-around">
       <div id="myabout" >
         <h1>About Me</h1>
-        <h3>Backround info</h3>
-        <p>With a Bachelors degree in Agricultural Economics and a passion for Technology<br>Grievin is a dedicated enthusiast with web design skills,software programming and cite development guru <br>I have worked as a freelance for MyProfile.Hub, google Kenya, Techdevs and booger.com <br></p>
-        <p>My interest in software development began quite a long time ago after the completion of my Highschool <br> I met with a software Engineer who showed me his art work and ever since then I fell in love with Software programming.</p>
+        <h3>Background info;</h3>
+        <p>With a Bachelors degree in Agricultural Economics and a passion for Technology,<br>Grievin is a dedicated enthusiast with web design skills,software programming and site development guru. <br>I have worked as a freelance for <strong>MyProfile.Hub</strong>, <strong>Google Kenya</strong>, <strong>Techdevs</strong> and <strong>Booger.com</strong> <br></p>
+        <p>My interest in software development began quite a long time ago, after the completion of my Highschool studies.<br> I met with a Software Engineer who showed me his art work and since then I fell in love with Software programming.</p>
         <h3>Current Interests and skills</h3>
         <p>My current Interest are cyber security programming, systems Programming and Artificial Intelligence</p>
         <p>My current skills are <em>HTML 5,</em><em>CSS,</em><em>JavaScript</em> and <em>Figma designing</em></p>
@@ -69,52 +69,46 @@
         <p>Here are some of the projects I have worked on;</p>
       </div>
       <div id="card" class="card" style="width: 25rem;">
-        <img src="./Assets/anitaskitchen.png" class="card-img-top" alt="Anitas kitchen">
+        <a href="https://grievi.github.io/Anitas-kitchen/"><img src="./Assets/anitaskitchen.png" class="card-img-top" alt="Anitas kitchen"></a>
         <div class="card-body">
           <h5 class="card-title">Anita's kitchen</h5>
-          <p class="card-text">This is a sample of a Restaurant web page.</p>
-          <a href="https://grievi.github.io/Anitas-kitchen/" class="btn btn-secondary">See</a>
+          <p class="card-text">This is a sample of a Restaurant web page.</p>          
         </div>
       </div>
       <div id="card" class="card" style="width:25rem;">
-        <img src="./Assets/kejachapchap.png" class="card-img-top" alt="buy">
+        <a href="https://kwathuta.github.io/Keja-Chap-Chap/" class="btn btn-secondary"><img src="./Assets/kejachapchap.png" class="card-img-top" alt="buy"></a>
         <div class="card-body">
           <h5 class="card-title">Keja Chap Chap</h5>
           <p class="card-text">About
             This platform lists houses for rent and for buying so that a user doesn't have to leave their comfort zone to look for them...</p>
-          <a href="https://kwathuta.github.io/Keja-Chap-Chap/" class="btn btn-secondary">See</a>
         </div>
       </div>
       <div id="card" class="card" style="width: 25rem;">
-        <img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno" height="270px">
+        <a href="https://grievi.github.io/pet-web/"><img src="./Assets/rottweiler-i1-sz6.jpg" class="card-img-top" alt="bruno" height="270px"></a>
         <div class="card-body">
           <h5 class="card-title">Favorite Pet</h5>
           <p class="card-text">This is a sample of web page for my favorite pet a dog  called Bruno.</p>
-          <a href="https://grievi.github.io/pet-web/" class="btn btn-secondary">See</a>
         </div>
         </div>
         <div id="card" class="card" style="width: 25rem;">
-          <img src="./Assets/prtfolio.png" class="card-img-top" alt="portfolio">
+          <a href="https://grievi.github.io/project-portfolio/" ><img src="./Assets/prtfolio.png" class="card-img-top" alt="portfolio"></a>
           <div class="card-body">
             <h5 class="card-title">Project Portfolio</h5>
             <p class="card-text">Project Portfolio for a client This is a sample of what a portfolio looks like</p>
-            <a href="https://grievi.github.io/project-portfolio/" class="btn btn-secondary">See</a>
           </div>
           </div>
           <div id="card" class="card" style="width: 25rem;">
-            <img src="./Assets/favrytband.png" class="card-img-top" alt="fband">
+            <a href="https://grievi.github.io/Favourite-band-Project/"><img src="./Assets/favrytband.png" class="card-img-top" alt="fband"></a>
             <div class="card-body">
               <h5 class="card-title">Favourite Band</h5>
               <p class="card-text">Project Favorite Band, Morgan Heritage music Band.See more details below</p>
-              <a href="https://grievi.github.io/Favourite-band-Project/" class="btn btn-secondary">See</a>
             </div>
             </div>
             <div id="card" class="card" style="width: 25rem;">
-              <img src="./Assets/pexels-athena-2582937.jpg" class="card-img-top" alt="...">
+              <a href="https://grievi.github.io/catch-up-project/"><img src="./Assets/pexels-athena-2582937.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">My first web page Catch up Project</h5>
-                <p class="card-text">This is my very first Project,dubbed my first-web-page.</p>
-                <a href="https://grievi.github.io/catch-up-project/" class="btn btn-secondary">See</a>
+                <p class="card-text">This is my very first Project,dubbed my first-web-page.</p>                
               </div>
             </div> 
     </div>
